cattle-system/rancher/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher-route
  namespace: cattle-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rancher.local.unrelated.family`)
      kind: Rule
      services:
        - name: rancher
          port: 80
  tls:
    secretName: local-unrelated-family-tls
